# netra-drone-surveillance-openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
api/: main.py
baseline/: __init__.py  run.py
env/: __init__.py  environment.py  grader.py  models.py  tasks.py
scripts/: deploy_hf_space.py  smoke_test.py  strip_docstrings.py  tidy_spacing.py  validate_config.py
server/: __init__.py  app.py  netra_environment.py
